feat: implement user info